# Computational_Geometry_HW

./: .fuse_hidden000004c60000001f  .gitignore  CMakeLists.txt
PA1_2_Crossroad/: SweepLine.cpp  SweepLine.h  main.cpp  test_data.txt  unit_test.cpp
Utils/: Conic.h  Line.h  Point.h  Vec.h  common.h  geo_base.h  type.h
